# k8s-ddlog

./: Cargo.toml  Makefile  affinity.dl  kube_policy.dl  metadata.dl  node.dl  pod.dl
config/: pod-nginx-nodeaffinity.yaml  pod-nginx-nodeselector.yaml  pod-nginx-podaffinity.yaml  pod-nginx-podaffinity2.yaml  rc-kubia-3pods.yaml
config/docker_image/: cluster-capacity-ex.yaml
config/docker_image/webapp/: app.js
doc/: README.md
src/: common.rs  main.rs  node.rs  pod.rs
