[package]
name = "informer-rs"
version = "0.1.0"
authors = ["Vikram Narayanan <vikram186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.59.0"
kube-runtime = "0.59.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_21"] }
kube_policy = { path = "./kube_policy_ddlog" }
differential_datalog = { path = "./kube_policy_ddlog/differential_datalog" }
ddlog_rt = { path = "./kube_policy_ddlog/types/ddlog_rt" }
types = { path = "./kube_policy_ddlog/types/" }
futures = "0.3.8"
env_logger = "0.8.2"
color-eyre = "0.5.10"
tokio = { version = "1.0.1", features = ["full"] }
log = "0.4.11"
anyhow = "1.0.37"
lazy_static = "1.4.0"
